--- a/blogs.html
+++ b/blogs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M</title>
+    <title>Mronah</title>
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="./css/utilties.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -15,43 +15,87 @@
             <h1 class="logo">Mronah</h1>
             <ul>
                 <li> <a href="index.html"> Home  </a> </li>
-                <li> <a href="blog.html">Blog </a> </li>
+                <li> <a href="blogs.html">Blog </a> </li>
                 <li> <a href="contact.html">Contact </a> </li>
+                <li> <a href="login.html">Login </a> </li>
+                <li> <a href="signup.html">Register </a> </li>
+
             </ul>
         </div>
     </div>
-    <!--Showcase-->
-    <section class="showcase">
+    <!--Head-->
+    <!-- Head -->
+    <section class="features-head bg-primary py-3">
         <div class="container grid">
-            <div class="showcase-text">
-                <h1> Easier Services </h1>
-                <p>
-                    Create Your Orders Faster , Take 
-                    Your Time See All Orders Status 
-                    Feal Free To chat with Admins Any 
-                    Time You would to check Any updates 
-                    about your orders.
+            <div>
+                <h1 class="xl">Blog</h1>
+                <p class="lead">
+                    Check out the features of Loruki that separate us from the
+						competition
                 </p>
-                <a href="contact.html" class="btn btn-outline">Make Order Now</a>
             </div>
-            <div class="showcase-form card">
-                <h2>Request a Service Now</h2>
-                <form>
-                    <div class="form-control">
-                        <input type="text" name="name" placeholder="Name">
-                    </div>
-                    <div class="form-control">
-                        <input type="email" name="email" placeholder="Email">
-                    </div>
-                    <div class="form-control">
-                        <input type="text" name="message" placeholder="Message">
-                    </div>
-                    <input type="submit" value="send" class="btn btn-primary"> 
-                </form>
+            <img src="images/server.png" alt="">
+        </div>
+    </section>
+
+    <!-- Sub head -->
+    <section class="features-sub-head bg-light py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">The Loruki Platform</h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor cupiditate dignissimos temporibus perspiciatis quae! Suscipit qui, consectetur ea consequatur, doloribus repellendus quasi, aut corporis nam alias culpa. Nostrum, inventore accusantium!
+                </p>
+            </div>
+            <img src="images/server2.png" alt="">
+        </div>
+    </section>
+
+    <section class="features-main my-2">
+        <div class="container grid grid-3">
+            <div class="card flex">
+                <i class="fa fa-server fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo saepe corrupti et dolorem voluptate at, nostrum rem voluptatem ab alias quia molestiae ea, libero nihil deserunt. Molestias, eum? Necessitatibus!</p>
+            </div>
+            <div class="card flex">
+                <i class="fa fa-network-wired fa-3x"></i>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+                    recusandae perferendis culpa, reiciendis a itaque debitis qui vel
+                    dignissimos ipsum!
+                </p>
+            </div>
+            <div class="card flex">
+                <i class="fa fa-laptop-code fa-3x"></i>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                    magnam.
+                </p>
+            </div>
+            <div class="card flex">
+                <i class="fa fa-database fa-3x"></i>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, a!
+                </p>
+            </div>
+            <div class="card flex">
+                <i class="fa fa-power-off fa-3x"></i>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                    magnam.
+                </p>
+            </div>
+            <div class="card flex">
+                <i class="fa fa-upload fa-3x"></i>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                    magnam.
+                </p>
             </div>
         </div>
     </section>
  
+  
 
     <!-- Footer -->
     <footer class="footer bg-dark py-5">
@@ -63,8 +107,11 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">Contact</a></li>
-                    <li><a href="index.html">Blogs</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li><a href="signup.html">Register</a></li>
+
                 </ul>
             </nav>
             <div class="social">
