--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M</title>
+    <title>Mronah</title>
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="./css/utilties.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -15,7 +15,7 @@
             <h1 class="logo">Mronah</h1>
             <ul>
                 <li> <a href="index.html"> Home  </a> </li>
-                <li> <a href="blog.html">Blog </a> </li>
+                <li> <a href="blogs.html">Blog </a> </li>
                 <li> <a href="contact.html">Contact </a> </li>
                 <li> <a href="login.html">Login </a> </li>
                 <li> <a href="signup.html">Register </a> </li>
@@ -85,7 +85,7 @@
     <!-- Cli -->
     <section class="cli">
         <div class="container grid">
-            <img src="./images/blog__export-data__export-data-og.gif" alt="">
+            <img src="./images/20945860.jpg" alt="">
             <div class="card">
                 <h3> Easy to Use , Create Services Orders  </h3>
             </div>
@@ -96,7 +96,7 @@
     </section>
 
     <!-- Cloud -->
-    <section class="cloud bg-primary my-2 py-2">
+    <section class="cloud bg-primary my-2 py-2" >
         <div class="container grid">
             <div class="text-center">
                 <h2 class="lg">Extreme Fast Services </h2>
@@ -106,7 +106,7 @@
                 </p>
                 <a href="features.html" class="btn btn-dark"> Read More </a>
             </div>
-            <img src="./images/harbor.gif">
+            <img src="./images/blog__export-data__export-data-og.gif">
         </div>
     </section>
 
