update login and register

--- a/blogs.html
+++ b/blogs.html
@@ -15,8 +15,8 @@
             <h1 class="logo">Mronah</h1>
             <ul>
                 <li> <a href="index.html"> Home  </a> </li>
-                <li> <a href="blogs.html">Blog </a> </li>
-                <li> <a href="contact.html">Contact </a> </li>
+                <!-- <li> <a href="blogs.html">Blog </a> </li> -->
+                <!-- <li> <a href="contact.html">Contact </a> </li> -->
                 <li> <a href="login.html">Login </a> </li>
                 <li> <a href="signup.html">Register </a> </li>
 
@@ -107,8 +107,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="blogs.html">Blogs</a></li>
+                    <!-- <li><a href="contact.html">Contact</a></li> -->
+                    <!-- <li><a href="blogs.html">Blogs</a></li> -->
                     <li><a href="login.html">Login</a></li>
                     <li><a href="signup.html">Register</a></li>
 
