--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
             <h1 class="logo">Mronah</h1>
             <ul>
                 <li> <a href="index.html"> Home  </a> </li>
-                <li> <a href="blogs.html">Blog </a> </li>
-                <li> <a href="contact.html">Contact </a> </li>
+                <!-- <li> <a href="blogs.html">Blog </a> </li> -->
+                <!-- <li> <a href="contact.html">Contact </a> </li> -->
                 <li> <a href="login.html">Login </a> </li>
                 <li> <a href="signup.html">Register </a> </li>
+                <li> <a href="javascript:;" class="lang" id="lang"> AR </a> </li>
 
             </ul>
         </div>
@@ -154,10 +155,11 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="blogs.html">Blogs</a></li>
+                    <!-- <li><a href="contact.html">Contact</a></li> -->
+                    <!-- <li><a href="blogs.html">Blogs</a></li> -->
                     <li><a href="login.html">Login</a></li>
                     <li><a href="signup.html">Register</a></li>
+
 
                 </ul>
             </nav>
@@ -170,9 +172,6 @@
             </div>
         </div>
     </footer>
-<script>
-
-
-</script>
+<script src="./javascript/index.js"></script>
 </body>
 </html>
