--- a/signup.html
+++ b/signup.html
@@ -15,10 +15,11 @@
             <h1 class="logo">Mronah</h1>
             <ul>
                 <li> <a href="index.html"> Home  </a> </li>
-                <li> <a href="blogs.html">Blog </a> </li>
-                <li> <a href="contact.html">Contact </a> </li>
+                <!-- <li> <a href="blogs.html">Blog </a> </li> -->
+                <!-- <li> <a href="contact.html">Contact </a> </li> -->
                 <li> <a href="login.html">Login </a> </li>
                 <li> <a href="signup.html">Register </a> </li>
+                <li> <a href="javascript:;" class="lang" id="lang"> AR </a> </li>
 
             </ul>
         </div>
@@ -33,7 +34,7 @@
                     Create New Account And Apply All Your Needs
                 </p>
             </div>
-            <img src="images/mronah_en.png" alt="">
+            <img src="images/mronah_en.png" alt="" id="logo">
         </div>
     </section>
 
@@ -96,8 +97,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="blogs.html">Blogs</a></li>
+                    <!-- <li><a href="contact.html">Contact</a></li> -->
+                    <!-- <li><a href="blogs.html">Blogs</a></li> -->
                     <li><a href="login.html">Login</a></li>
                     <li><a href="signup.html">Register</a></li>
 
@@ -112,9 +113,7 @@
             </div>
         </div>
     </footer>
-<script>
+    <script src="./javascript/index.js"></script>
 
-
-</script>
 </body>
 </html>
