--- a/login.html
+++ b/login.html
@@ -15,10 +15,12 @@
             <h1 class="logo">Mronah</h1>
             <ul>
                 <li> <a href="index.html"> Home  </a> </li>
-                <li> <a href="blogs.html">Blog </a> </li>
-                <li> <a href="contact.html">Contact </a> </li>
+                <!-- <li> <a href="blogs.html">Blog </a> </li> -->
+                <!-- <li> <a href="contact.html">Contact </a> </li> -->
                 <li> <a href="login.html">Login </a> </li>
                 <li> <a href="signup.html">Register </a> </li>
+                <li> <a href="javascript:;" class="lang" id="lang"> AR </a> </li>
+
 
             </ul>
         </div>
@@ -33,7 +35,7 @@
                     Login Again And Check Your Orders Status
                 </p>
             </div>
-            <img src="images/mronah_en.png" alt="">
+            <img src="images/mronah_en.png" alt="" id="logo">
         </div>
     </section>
 
@@ -88,8 +90,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="blogs.html">Blogs</a></li>
+                    <!-- <li><a href="contact.html">Contact</a></li> -->
+                    <!-- <li><a href="blogs.html">Blogs</a></li> -->
                     <li><a href="login.html">Login</a></li>
                     <li><a href="signup.html">Register</a></li>
 
@@ -104,9 +106,7 @@
             </div>
         </div>
     </footer>
-<script>
+    <script src="./javascript/index.js"></script>
 
-
-</script>
 </body>
 </html>
