--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="./css/utilties.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body onload="">
+    <!-- loader -->
+    <!-- <div id="loader">
+        <img src="./images/capture.PNG" class="logo-loader">
+    </div> -->
+
     <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
@@ -65,17 +70,21 @@
 
             <div class="grid grid-3 text-center my-4">
                 <div>
-                    <i class="fa fa-server fa-3x"></i>
+                    <!-- <i class="fa fa-server fa-3x"></i> -->
+                    <img src="./images/s9.svg">
                     <h3>10,349,405</h3>
                     <p class="text-secondary">Orders</p>
                 </div>
                 <div>
-                    <i class="fa fa-upload fa-3x"></i>
+                    <!-- <i class="fa fa-upload fa-3x"></i> -->
+                    <img src="./images/s2_done.svg">
+
                     <h3>405 TB</h3>
                     <p class="text-secondary">Attachments</p>     
                 </div>
                 <div>
-                    <i class="fa fa-user fa-3x"></i>
+                    <!-- <i class="fa fa-user fa-3x"></i> -->
+                    <img src="./images/s0.svg">
                     <h3>2,120,627</h3>
                     <p class="text-secondary">Clients</p>
                 </div>
@@ -89,6 +98,12 @@
             <img src="./images/20945860.jpg" alt="">
             <div class="card">
                 <h3> Easy to Use , Create Services Orders  </h3>
+            </div>
+            <div class="card">
+                <h3> Contact with Organizations </h3>
+            </div>
+            <div class="card">
+                <h3> Contact with Organizations </h3>
             </div>
             <div class="card">
                 <h3> Contact with Organizations </h3>
@@ -114,33 +129,99 @@
     <!-- Services -->
     <section class="services">
         <h2 class="md text-center my-2">
-            Services
+            Partners
         </h2>
         <div class="container flex">
             <div class="card">
-                <h4> Shipping  </h4>
-                <img src="./images/Delivery_express.jpg" style="width:100px;height: 100px;">
+                <img src="./images/partner_17.png" style="">
             </div>
 
             <div class="card">
-                <h4> Saper   </h4>
-                <img src="./images/Logistic infographic 03.jpg" style="width:100px;height: 100px;">
+                <img src="./images/partner_18.png" style="">
             </div>
             <div class="card">
-                <h4> Common </h4>
-                <img src="./images/23743654.jpg" style="width:100px;height: 100px;">
+                <img src="./images/partner_19.png" style="">
             </div>
             <div class="card">
-                <h4> Education </h4>
-                <img src="./images/20945860.jpg" style="width:100px;height: 100px;">
+                <img src="./images/partner_20.png" style="">
             </div>
             <div class="card">
-                <h4> Health </h4>
-                <img src="./images/aurielaki180200054.jpg" style="width:100px;height: 100px;">
+                <img src="./images/partner_21.png" style="">
             </div>
             <div class="card">
-                <h4> Economy </h4>
-                <img src="./images/—Pngtree—port cargo ship transport logistics_4459488.png" style="width:100px;height: 100px;">
+                <img src="./images/partner_22.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_23.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_24.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_25.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_26.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_27.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_28.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_29.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_16.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_15.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_14.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_13.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_12.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_11.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_10.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_09.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_08.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_07.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_06.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_05.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_04.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_03.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_02.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_01.png" style="">
+            </div>
+            <div class="card">
+                <img src="./images/partner_00.png" style="">
             </div>
         </div>
     </section>
